--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.29.0",
     "prettier": "^3.3.3",
+    "sass": "^1.80.3",
     "vite": "^5.4.8"
   }
 }
