--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "element-plus": "^2.8.6",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
@@ -23,6 +24,7 @@
     "eslint-plugin-vue": "^9.29.0",
     "prettier": "^3.3.3",
     "sass": "^1.80.3",
+    "unplugin-element-plus": "^0.8.0",
     "vite": "^5.4.8"
   }
 }
