--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "chart.js": "^4.4.5",
     "element-plus": "^2.8.6",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-chartjs": "^5.3.1",
+    "vue-router": "^4.4.5",
+    "vue3-lottie": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
